--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     //noinspection GradleCompatible
+    implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
