--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,13 @@ android {
 
 dependencies {
 
+    implementation 'com.google.maps.android:android-maps-utils:2.2.3'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+
+    // Declare the dependency for the Cloud Storage library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-storage'
     //noinspection GradleCompatible
     implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'com.android.support:design:28.0.0'
