Finish edit and delete campaign.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment2">
         <activity
+            android:name=".EditCampaignActivity"
+            android:exported="false" />
+        <activity
             android:name=".CampaignDetailActivity"
             android:exported="false" />
 
